[gd_scene load_steps=2 format=3 uid="uid://1h5mwjlljbea"]

[ext_resource type="Script" uid="uid://cap6oxgyi8l2m" path="res://SCRIPTS/shelf_slot.gd" id="1_otpxs"]

[node name="Slot" type="ColorRect"]
custom_minimum_size = Vector2(25, 25)
color = Color(0, 0, 0, 0.4392157)
script = ExtResource("1_otpxs")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
